added some features

--- a/project.html
+++ b/project.html
@@ -710,7 +710,7 @@ padding: 20px;
 
      <div class="el3">
             <div class="el3a">
-                <h3>NITHIN</h3>
+                <h3>NITHIN FARMS</h3>
             </div>
 
             <div class="el3b">
